# ChordCoach

./: .gitignore  .pyre_configuration  CMakeLists.txt  README.md  beginner guide.md  check_rtmidi_dll.py  chordcoach.spec  design_spec.md  gemini-models.json  gemini-models.md  implementation_plan.md  installer.iss  main_implementation_plan.md  pyproject.toml  pyrightconfig.json
.github/workflows/: macos-build.yaml
scripts/: test_crawler.py  test_db.py  test_gemini_live.py  test_hardware.py  test_ingestor.py  test_new_exercises.py
src/: app.py
src/chordcoach_companion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hardware/: CMakeLists.txt
src/hardware/src/: audio_handler.cpp  midi_handler.cpp  pybindings.cpp
src/logic/services/: adaptive_engine.py  chord_trainer.py  curriculum_service.py  database_manager.py  evaluation_service.py  gemini_service.py  midi_ingestor.py  repertoire_crawler.py  settings_service.py
src/resources/: curriculum_tracks.json  sequences.json
src/ui/: CenterWorkspace.qml  ChordTrainerView.qml  DashboardView.qml  LeftSidebar.qml  SettingsView.qml  VisualKeyboard.qml  main.qml
src/ui/components/: ChordFormulaCard.qml  EnhancedSheetMusic.qml  OnboardingOverlay.qml  VisualKeyboard.qml
tests/: test_curriculum.py  verify_fix.py
